--- a/catalog/view/theme/default/template/checkout/cart.twig
+++ b/catalog/view/theme/default/template/checkout/cart.twig
@@ -242,12 +242,12 @@
 
 <script>
   function des(id) {
-      console.log($('#'+id).val());
+      // console.log($('#'+id).val());
       $('#'+id).val(parseInt($('#'+id).val())-1);
       $('#car').submit();
   }
   function asc(id) {
-      console.log($('#'+id).val());
+      // console.log($('#'+id).val());
       $('#'+id).val(parseInt($('#'+id).val())+1);
       $('#car').submit();
   }
