--- a/catalog/view/theme/default/template/account/address_form.twig
+++ b/catalog/view/theme/default/template/account/address_form.twig
@@ -1,4 +1,5 @@
 {{ header }}
+{{ column_left_user }}
 <div id="account-address" class="container">
   {{ include(helper.template('_partial/breadcrumb')) }}
   <div class="row">{{ column_left }}
