--- a/catalog/view/theme/default/template/account/order_info.twig
+++ b/catalog/view/theme/default/template/account/order_info.twig
@@ -1,5 +1,5 @@
 {{ header }}
-{{ column_left }}
+{{ column_left_user }}
 
     <div class="she-center col-sm-9 myorder-detail order-wrap j-order-conter j-order-detail" style="padding-top:20px">
       <div class="detail-title">
