--- a/catalog/view/theme/default/template/account/return_form.twig
+++ b/catalog/view/theme/default/template/account/return_form.twig
@@ -1,4 +1,5 @@
 {{ header }}
+{{ column_left_user }}
 <div id="account-return" class="container">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
