--- a/catalog/view/theme/default/template/account/return_info.twig
+++ b/catalog/view/theme/default/template/account/return_info.twig
@@ -1,5 +1,5 @@
 {{ header }}
-      {{ column_left }}
+      {{ column_left_user }}
     <div id="content" class="{{ class }} col-sm-9">{{ content_top }}
       <h1>{{ heading_title }}</h1>
       <table class="table table-bordered table-hover">
