--- a/catalog/view/theme/default/template/account/return_list.twig
+++ b/catalog/view/theme/default/template/account/return_list.twig
@@ -1,5 +1,5 @@
 {{ header }}
-      {{ column_left }}
+      {{ column_left_user }}
 <div class="she-center col-sm-9 myorder-detail order-wrap j-order-conter j-order-detail" id="orders_new_right">
   <h3 class="she-tl-h3">{{ heading_title }}</h3>
   {#<p>Whatever you need, we’re here to help!</p>#}
