--- a/catalog/view/theme/default/template/account/reward.twig
+++ b/catalog/view/theme/default/template/account/reward.twig
@@ -1,5 +1,5 @@
 {{ header }}
-    {{ column_left }}
+    {{ column_left_user }}
     <div class="she-center col-sm-9 col-xs-12">
       <div class="wrapper">
         <div class="member-point-title-h">
