--- a/catalog/view/theme/default/template/account/tickets.twig
+++ b/catalog/view/theme/default/template/account/tickets.twig
@@ -1,5 +1,5 @@
 {{ header }}
-      {{ column_left }}
+      {{ column_left_user }}
     <div class="she-center col-sm-9 col-xs-12 per-setting">
         <div class="row m-my-account">
             <div class="col-xs-9 c-tickets j-tickets">
