--- a/catalog/view/theme/default/template/account/transaction.twig
+++ b/catalog/view/theme/default/template/account/transaction.twig
@@ -1,5 +1,5 @@
 {{ header }}
-    {{ column_left }}
+    {{ column_left_user }}
     <div class="she-center col-sm-9 col-xs-12 per-wallet">
       <h3 class="she-tl-h3">{{ heading_title }}</h3>
       <div class="wallet-balance">
