--- a/catalog/view/theme/default/template/account/wishlist.twig
+++ b/catalog/view/theme/default/template/account/wishlist.twig
@@ -1,5 +1,5 @@
 {{ header }}
-    {{ column_left }}
+    {{ column_left_user }}
     <div id="" class="she-center col-sm-9">
       <div class="wish-list">
         <header style="border: medium none;">
