--- a/catalog/view/theme/default/template/account/address_list.twig
+++ b/catalog/view/theme/default/template/account/address_list.twig
@@ -1,4 +1,5 @@
 {{ header }}
+{{ column_left_user }}
 {% if success %}
     <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
 {% endif %}
