--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -7,7 +7,11 @@
       var seckill_arr = [];
       var js_site_from = 'www';
   </script>
-
+  <style type = “text/css”>
+    a{text-decoration:none}
+    /*a:link {text-decoration:none;}*/
+    /*a:active {color: red;}*/
+  </style>
   <link href="catalog/view/theme/default/stylesheet/stylesheet.css" rel="stylesheet">
   <link href="catalog/view/javascript/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
