--- a/catalog/view/theme/default/template/common/success.twig
+++ b/catalog/view/theme/default/template/common/success.twig
@@ -2,5 +2,5 @@
 <link rel="stylesheet" type="text/css" href="//sheinsz.ltwebstatic.com/she_dist/css/shein-8c4dc9970b.css">
 <div class="reg-show-top she-text-center" style="margin-bottom: 30px;margin-top:30px;"><p><img style="width: 70px;" src="//sheinsz.ltwebstatic.com/she_dist/images/succed-457c6ca866.png">
         {{ text_success }}
-  </p> <a href="{{ login }}" class="she-btn-black she-btn-l">Shop Now</a></div>
+  </p> <a href="{{ continue }}" class="she-btn-black she-btn-l">Shop Now</a></div>
 {{ footer }}
