--- a/catalog/view/theme/default/template/account/forgotten.twig
+++ b/catalog/view/theme/default/template/account/forgotten.twig
@@ -1,15 +1,19 @@
 {{ header }}
+  {% if error_warning %}
+    <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  {% endif %}
 <div class="container forget-password">
   <div class="forget-password-con">
     <div class="operate-hint">
       <h2>Forgotten Password</h2>
-      <p class="forget-top-title">If you’ve forgotten your password, please enter your registered email address. <br />We’ll send you a link to reset your password. </p>
+      <p class="forget-top-title">{{ text_email }}</p>
     </div>
     <div class="input-email-bg">
-      <form action="javascript:;" name="theForm" method="post">
+      <form  action="{{ action }}" method="post" enctype="multipart/form-data" name="theForm">
         <div class="forget-input-bg forget_verify">
-          <input name="email" id="email" class="forget-email-input" value="" type="text" />
-          <input class="forget_submit she-btn she-btn-sm-prim" value="Continue" onclick="check_form();" type="button" />
+          <input value="{{ email }}" placeholder="{{ entry_email }}" type="text" name="email" style="height: 36px;width: 70%;border: 1px solid #ccc;padding-left: 1%"> <div style="display: none;" class="input-error-txt she-text-left"></div></div>
+        <a href="{{ back }}"><button type="button" class="she-btn-white">{{ button_back }}</button></a>
+          <button type="submit" class="she-btn-black">{{ button_submit }}</button>
           <img src="loading_vc554483.gif" class="forget_waiting" />
           <p id="tip" class="forget_error_title" style="color: rgb(255, 0, 0);"></p>
         </div>
