--- a/catalog/view/theme/default/template/account/login.twig
+++ b/catalog/view/theme/default/template/account/login.twig
@@ -8,6 +8,12 @@
       <div class="sign-in">
         <div class="sign-in-title">
           <h2>{{ text_sign }}</h2>
+            {% if success %}
+              <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
+            {% endif %}
+            {% if error_warning %}
+              <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+            {% endif %}
         </div>
         <div class="sign-in-detail">
           <p class="login-prompt" id="login_error"></p>
