--- a/catalog/view/theme/default/template/common/column_left.twig
+++ b/catalog/view/theme/default/template/common/column_left.twig
@@ -1,5 +1,5 @@
 {% if modules %}
-    <aside id="column-left" class="col-sm-2 hidden-xs">
+    <aside id="column-left" class="col-sm-2 hidden-xs" style="margin-top: 20px;">
         {% for module in modules %}
             {{ module }}
         {% endfor %}
