--- a/catalog/view/theme/default/template/product/search.twig
+++ b/catalog/view/theme/default/template/product/search.twig
@@ -16,7 +16,7 @@
               <ul class="list-classify-filter">
                 <li class="filter-title j-attr-auto">
                   <div class=" j-filter-up-info">
-                    <span> <a href="javascript:0" ></a> {{ category.name }}</span>
+                    <span> <a href="javascript:0"  id="{{ category.category_id }}"> {{ category.name }}</a></span>
                     <i class="iconfont iconfont_x icon-down " id="{{ category.name }}"></i>
                   </div>
                   <div class="filter-dropdown {{ category.name }}">
@@ -81,6 +81,10 @@
     </div>
 </div>
 <script type="text/javascript">
+  $(function () {
+
+      $('#input-sort').css("width","100%");
+  })
 $('.aaa').bind('click', function() {
     var id = this.id;
     // alert(id);
