--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -4,12 +4,7 @@
 <div class="j-list-cate-inner  c-list-cate-inner">
 
   <div class="mgds-goodsl  container-fluid-1200  j-mgds-goodsl-wrap">
-    <ul class="c-breadcrumb">
-      <li> <a rel="nofollow" href="/">Home</a> </li>
-      <!-- 实体 -->
-      <li><a href="">Sale</a></li>
-      <!-- dailynew -->
-    </ul>
+      {{ include(helper.template('_partial/breadcrumb')) }}
 
     <!-- 列表项 -->
     <div class="row">
