--- a/catalog/view/theme/default/template/common/cart.twig
+++ b/catalog/view/theme/default/template/common/cart.twig
@@ -61,7 +61,7 @@
                         {#<p class="attr-total" id="attr_retail_price_discount" style="display: none;"><span>Discount<a>0</a>off</span></p>#}
                         <p class="attr-total" id="attr_total" style="font-weight: bold;"><span class="shipping-total-label">Total:</span><span class="shipping-total" style="color: rgb(209, 0, 0);" id="shipping_total">{{ first.text }}</span></p>
                         <div class="shoppingtop-baskets">
-                          <input class="she-btn-black she-btn-l viewbag" name="viewcart" value="view bag" type="submit" />
+                            <a href="{{ cart }}"><input class="she-btn-black she-btn-l viewbag" name="viewcart" value="view bag" type="button" /></a>
                         </div>
                       </div>
                     </form>
