--- a/catalog/view/theme/default/template/common/currency.twig
+++ b/catalog/view/theme/default/template/common/currency.twig
@@ -1,5 +1,5 @@
 {% if currencies|length > 1 %}
-<div class="pull-left" style="margin-top: -8%">
+<div class="pull-left" style="margin-top: -13%;margin-left: -30px">
   <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-currency">
     <div class="btn-group currency" id="user_menu3">
       <a class="btn btn-link dropdown-toggle present three outer j-present-currency" data-toggle="dropdown">{% for currency in currencies %}
